bug #25696: ncftp error with 0.5.09 https://savannah.nongnu.org/bugs/?25696

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 New in v0.5.11 (2009/03/??)
 ---------------------------
+bug #25696: ncftp error with 0.5.09
+https://savannah.nongnu.org/bugs/?25696
+
 bug #15664: When restoring backup: "OverflowError:
             long int too large to convert to int"
 https://savannah.nongnu.org/bugs/?15664
