--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 New in v0.5.11 (2009/03/??)
 ---------------------------
+bug #25787: Usernames with @-sign are not handled properly
+https://savannah.nongnu.org/bugs/?25787
+
 Bug #333057: GnuPGInterface prints exit statuses incorrectly
 https://bugs.launchpad.net/bugs/333057
 
