--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.11 (2009/03/??)
+New in v0.5.11 (2009/03/08)
 ---------------------------
 bug #25787: Usernames with @-sign are not handled properly
 https://savannah.nongnu.org/bugs/?25787
