--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+New in v0.5.12 (2009/03/??)
+---------------------------
+Add Epydoc output to web site and start documentation.
+
+
 New in v0.5.11 (2009/03/08)
 ---------------------------
 bug #25787: Usernames with @-sign are not handled properly
