--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,15 +1,28 @@
-New in v0.5.12 (2009/03/??)
+New in v0.5.12 (2009/03/15)
 ---------------------------
-Add Epydoc output to web site and start documentation.
-http://duplicity.nongnu.org/epydoc/index.html
-
 bug #25838: Backup fails / ncftp - remote file already exists
-https://savannah.nongnu.org/bugs/?25838  With this fix we also
-get resume in ftp get/put.  If a put or get fails part of the
-way through, ncftp will resume on the next retry.
+https://savannah.nongnu.org/bugs/?25838
+With this fix we also get resume in ftp get/put.  If a put or
+get fails part of the way through, ncftp will resume on the
+next retry.
 
 bug #25853: duplicity fails with boto passwords coming from ~/.boto
 https://savannah.nongnu.org/bugs/?25853
+
+patch #6773: Make user name optional in rsync backend
+https://savannah.nongnu.org/patch/?6773
+
+GPG errors will no longer cause tracebacks, but will produce a
+log entry, from gpg, similar to the following:
+===== Begin GnuPG log =====
+gpg: BAD0BAD0: skipped: public key not found
+gpg: [stdin]: encryption failed: public key not found
+===== End GnuPG log =====
+This will let the user know what really caused the GPG process
+to fail, and what really caused errors like 'broken pipe'.
+
+Add Epydoc output to web site and start adding documentation.
+http://duplicity.nongnu.org/epydoc/index.html
 
 
 New in v0.5.11 (2009/03/08)
