--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@ Add more error detection to FTP backend.
 
 Fix backends so sleep does not occur after last retry.
 
+BackendException does not cause traceback except when
+verbosity is at level 9 (debug).
+
 
 New in v0.5.12 (2009/03/15)
 ---------------------------
