--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.14 (2009/04/??)
+New in v0.5.14 (2009/04/02)
 ---------------------------
 After email voting among known duplicity contributors,
 the decision was reached to revert to the GPL Version 2
