--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+New in v0.5.15 (2009/04/??)
+---------------------------
+FTP backend was failing on PureFTPd when the "-x ''"
+option was removed from the second ncftpls popen, a fix
+that was implemented due to bug #24741.  This fix does
+the ls in one pass by extracting either the first or the
+last entry on the 'ls -l'.  [Standard FTP would be nice!]
+
+
 New in v0.5.14 (2009/04/02)
 ---------------------------
 After email voting among known duplicity contributors,
