--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.15 (2009/04/??)
+New in v0.5.15 (2009/04/09)
 ---------------------------
 FTP backend was failing on PureFTPd when the "-x ''"
 option was removed from the second ncftpls popen, a fix
@@ -6,14 +6,18 @@ that was implemented due to bug #24741.  This fix does
 the ls in one pass by extracting the last entry on the
 'ls -l' listing.
 
-If a file is unreadable due to access rights or other non-
-fatal errors, put out error message and continue rather
-than dying messily with a traceback.
+If a file is unreadable due to access rights or other
+non-fatal errors, put out error message and continue
+rather than dying messily with a traceback.
 
 Added tilde '~' expansion and variable expansion in the
 options that require a filename.  You can now have this
 "--archive-dir=~/ArchDir/$SYSNAME" if you need it.  No
 expansion is applied to the source or target URL's.
+
+Fixed problem I caused, again, where sys.exit() was
+trapping instead of exiting.  Added big note to not
+to do that again.
 
 
 New in v0.5.14 (2009/04/02)
