bug #25594: wrong backup statistics https://savannah.nongnu.org/bugs/?25594

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+New in v0.5.16 (2009/04/??)
+---------------------------
+bug #25594: wrong backup statistics
+https://savannah.nongnu.org/bugs/?25594
+
+
 New in v0.5.15 (2009/04/09)
 ---------------------------
 FTP backend was failing on PureFTPd when the "-x ''"
