--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+New in v0.5.18 (2009/05/??)
+---------------------------
+Added support for RackSpace's CloudFiles, cf+http.
+
+
 New in v0.5.17 (2009/05/04)
 ---------------------------
 Removed one line of code left from some testing that I
