Only half of this bug is fixed but it's still useful. bug #21792: pipe call fails with an error OSError:             [Errno 24] Too many open files https://savannah.nongnu.org/bugs/?21792

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ New in v0.5.18 (2009/05/??)
 ---------------------------
 Added support for RackSpace's CloudFiles, cf+http.
 
+Only half of this bug is fixed but it's still useful.
+bug #21792: pipe call fails with an error OSError:
+            [Errno 24] Too many open files
+https://savannah.nongnu.org/bugs/?21792
+
 
 New in v0.5.17 (2009/05/04)
 ---------------------------
