* correct man page to claim hash of backend url rather than has of args

--- a/duplicity.1
+++ b/duplicity.1
@@ -452,7 +452,7 @@ name is currently only used to affect the default
 , but may be used for additional features in the future. Users running
 more than one distinct backup are encouraged to use this option.
 
-If not specified, the default value is a hash of the command line arguments excluding options and commands.
+If not specified, the default value is a hash of the backend URL.
 
 .TP
 .B --no-encryption
