* --name affects *expansion*, not default value, of --archive-dir

--- a/duplicity.1
+++ b/duplicity.1
@@ -442,7 +442,7 @@ to use a separate name for each logically distinct backup. For
 example, someone may use "home_daily_s3" for the daily backup of a
 home directory to Amazon S3. The structure of the name is up to the
 user, it is only important that the names be distinct. The symbolic
-name is currently only used to affect the default
+name is currently only used to affect the expansion of
 .B --archive-dir
 , but may be used for additional features in the future. Users running
 more than one distinct backup are encouraged to use this option.
